# signalcare-agentic-demo

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  TASKS.md  docker-compose.yml  pytest.ini
app/: Dockerfile  main.py  pyproject.toml
app/L0_observability/: __init__.py
app/L0_observability/prompt_registry/: __init__.py  registry.py  renderer.py  snapshot.py  types.py
app/L0_observability/prompts/: compliance_ops_digest.yaml
app/L2_guardrails/: __init__.py  baa_gate.py  injection_sentinel.py  phi_redactor.py
app/L3_agents/: README.md
app/L3_agents/compliance_ops/: README.md  __init__.py  agent.py  renderer.py  tools.py
app/L6_adapters/: README.md  __init__.py
app/L6_adapters/ai_gateway/: __init__.py  anthropic_gateway.py  base.py  local.py  openrouter.py  router.py
data/seed/: hardening_status.json
docs/: build-plan.md  demo-script.md
docs/adrs/: 0000-adr-template.md  0001-python-fastapi-for-demo.md  0002-cloud-agnostic-adapter-pattern.md  0003-defer-container-runtime-to-phase-3.md  0004-direct-sdks-over-openrouter-proxy.md  0005-baa-gate-wraps-router-not-adapters.md  0006-l2-middleware-ordering-and-phi-present-tag.md  0007-injection-sentinel-hybrid-detection.md  0008-compliance-ops-digest-ux.md  0009-prompt-registry-yaml-first-postgres-additive.md
docs/handoffs/: 2026-07-07-phase1-close-to-phase2.md  2026-07-07-phase2-backend-close-to-cfrontend.md  2026-07-07-phase2-sessions-a-b-to-session-c.md  2026-07-07-phase2-task-3-close-designs-locked.md  2026-07-07-phase2-tasks-1-2-to-injection-sentinel.md  2026-07-07-scaffold-to-week1.md  2026-07-07-week1-core-to-live-verify.md
infra/ollama/: models.txt
infra/postgres/: init.sql
tests/: conftest.py
tests/integration/: test_ai_gateway_live.py  test_digest_flow.py
tests/unit/: test_ai_gateway.py  test_baa_gate.py  test_compliance_ops.py  test_injection_sentinel.py  test_phi_redactor.py  test_prompt_registry.py
